@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.4 2004/08/13 03:15:49 minskim Exp $
+$NetBSD: distinfo,v 1.5 2004/08/15 15:17:07 minskim Exp $
 
-SHA1 (ttf-alee_1.3.tar.gz) = f2fa0e83bfea8b6e454c4e249012c4532abfd046
-Size (ttf-alee_1.3.tar.gz) = 278805 bytes
+SHA1 (ttf-alee_1.4.tar.gz) = 9b4fc824fec10ee90367c056d1c5b1284cc49f40
+Size (ttf-alee_1.4.tar.gz) = 279863 bytes
